# record-cameras

./: .gitignore  CMakeLists.txt  README.md  Record Cameras.desktop  recorder.glade
include/: camera.h  common_funcs.h  gui.h  types.h
src/: camera.cpp  common_funcs.cpp  gui.cpp  main.cpp
